--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Sardine</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum provident dicta adipisci, soluta itaque cupiditate, quidem, vel reiciendis et odio optio eligendi! Nemo dolor neque hic labore aspernatur eos minus.</p>
 </body>
 </html>
